# docxtool

./: .env.example  .gitattributes  .gitignore  AGENTS.md  API.md  CONVENTIONS.md  DEPLOY.md  README.md  UPLOAD_MANIFEST.md  config.json  importer.py  index1.html  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run.ps1  run.sh  server.py  style_config.py
deploy/: nginx-docxtool.conf
docs/: API.md  DEPLOY.md  GITHUB_UPLOAD_GUIDE.md  RECOGNITION_ARCHITECTURE.md  RECOGNITION_RELEASE.md  UPLOAD_MANIFEST.md
engine/: __init__.py  _core.py  normal.py
pages_dist/: _worker.js  index.html
scripts/: analyze_end_format.py  analyze_letterhead_batch.py  batch_test_docx.py  benchmark_recognition.py  compare_recognition_runs.py  generate_005_format_fixtures.py  generate_secrets.py  migrate_legacy_database.ps1  normalize_correct_template_role_spacing.py  publish_to_github.ps1
tests/: frontend-format-config.test.mjs  test_body_order_export.py  test_cleanup_engine.py  test_config_driven_styles.py  test_context_candidate.py  test_core_feature_integration.py  test_database.py  test_database_storage.py  test_document_classifier.py  test_document_structure.py  test_docx_integrity.py  test_engine_heading_spacing.py  test_entrypoint.py  test_env_loader.py  test_importer_broken_relationships.py  test_importer_heading_flow.py  test_letterhead_config.py  test_letterhead_engine.py  test_numbered_bold_detection.py  test_numbering_engine.py  test_packaging.py  test_page_number_engine.py  test_pages_proxy_packaging.py  test_paths.py  test_processing_flags.py  test_punctuation_docx.py  (+23 more)
(+49 files in other folders)
