[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docxtool"
version = "0.1.0"
description = "DOCX official-document formatting web service"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.1.2,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
docxtool = ["resources/config/*.json"]
